[gd_scene load_steps=92 format=2]

[ext_resource path="res://assets/Characters/Dragon/Blue/BlueDragon(Idle).png" type="Texture" id=1]
[ext_resource path="res://source/Game/Entities/Localplayer/Localplayer.gd" type="Script" id=2]
[ext_resource path="res://assets/Characters/Dragon/Blue/Running/BlueDragon(Running)1.png" type="Texture" id=3]
[ext_resource path="res://assets/Characters/Dragon/Blue/Running/BlueDragon(Running)5.png" type="Texture" id=4]
[ext_resource path="res://assets/Characters/Dragon/Blue/Running/BlueDragon(Running)4.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/Dragon/Blue/Running/BlueDragon(Running)3.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/Dragon/Blue/Running/BlueDragon(Running)2.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/Dragon/Blue/Running/BlueDragon(Running)6.png" type="Texture" id=8]
[ext_resource path="res://assets/Characters/Dragon/Blue/Jumping/BlueDragon(Jump)1.png" type="Texture" id=9]
[ext_resource path="res://assets/Characters/Dragon/Blue/Jumping/BlueDragon(Jump)2.png" type="Texture" id=10]
[ext_resource path="res://assets/Characters/Dragon/Blue/Jumping/BlueDragon(RunJump)2.png" type="Texture" id=11]
[ext_resource path="res://assets/Characters/Dragon/Blue/Jumping/BlueDragon(RunJump)1.png" type="Texture" id=12]
[ext_resource path="res://assets/Characters/Dragon/Blue/Jumping/BlueDragon(RunJump)3.png" type="Texture" id=13]
[ext_resource path="res://assets/Characters/Dragon/Green/Running/GreenDragon(Running)3.png" type="Texture" id=14]
[ext_resource path="res://assets/Characters/Dragon/Green/Running/GreenDragon(Running)1.png" type="Texture" id=15]
[ext_resource path="res://assets/Characters/Dragon/Green/Jumping/GreenDragon(Jump)2.png" type="Texture" id=16]
[ext_resource path="res://assets/Characters/Dragon/Green/Running/GreenDragon(Running)6.png" type="Texture" id=17]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Running/YellowDragon(Running)1.png" type="Texture" id=18]
[ext_resource path="res://assets/Characters/Dragon/Blue/Jumping/DoubleJump(Roll).png" type="Texture" id=19]
[ext_resource path="res://assets/Characters/Dragon/Green/Jumping/GreenDragon(RunJump)2.png" type="Texture" id=20]
[ext_resource path="res://assets/Characters/Dragon/Red/Running/RedDragon(Running)6.png" type="Texture" id=21]
[ext_resource path="res://assets/Characters/Dragon/Red/RedDragon(Slide).png" type="Texture" id=22]
[ext_resource path="res://assets/Characters/Dragon/Green/GreenDragon(Idle).png" type="Texture" id=23]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Running/YellowDragon(Running)5.png" type="Texture" id=24]
[ext_resource path="res://assets/Characters/Dragon/Green/GreenDragon(Slide).png" type="Texture" id=25]
[ext_resource path="res://assets/Characters/Dragon/Red/Jumping/RedDragon(IdleJump)2.png" type="Texture" id=26]
[ext_resource path="res://assets/Characters/Dragon/Red/Jumping/RedDragon(RunJump)3.png" type="Texture" id=27]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Jumping/YellowDragon(Jump)1.png" type="Texture" id=28]
[ext_resource path="res://assets/Characters/Dragon/Red/Running/RedDragon(Running)1.png" type="Texture" id=29]
[ext_resource path="res://assets/Characters/Dragon/Green/Running/GreenDragon(Running)2.png" type="Texture" id=30]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Running/YellowDragon(Running)2.png" type="Texture" id=31]
[ext_resource path="res://assets/Characters/Dragon/Red/Running/RedDragon(Running)2.png" type="Texture" id=32]
[ext_resource path="res://assets/Characters/Dragon/Green/Jumping/DoubleJump(Roll).png" type="Texture" id=33]
[ext_resource path="res://assets/Characters/Dragon/Blue/BlueDragon(Slide).png" type="Texture" id=34]
[ext_resource path="res://assets/Characters/Dragon/Green/Jumping/GreenDragon(RunJump)1.png" type="Texture" id=35]
[ext_resource path="res://assets/Characters/Dragon/Yellow/YellowDragon(Slide).png" type="Texture" id=36]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Jumping/DoubleJump(Roll).png" type="Texture" id=37]
[ext_resource path="res://assets/Characters/Dragon/Red/Running/RedDragon(Running)3.png" type="Texture" id=38]
[ext_resource path="res://assets/Characters/Dragon/Red/Running/RedDragon(Running)5.png" type="Texture" id=39]
[ext_resource path="res://assets/Characters/Dragon/Red/Jumping/DoubleJump(Roll).png" type="Texture" id=40]
[ext_resource path="res://assets/Characters/Dragon/Green/GreenDragon(Turn).png" type="Texture" id=41]
[ext_resource path="res://assets/Characters/Dragon/Green/Jumping/GreenDragon(RunJump)3.png" type="Texture" id=42]
[ext_resource path="res://assets/Characters/Dragon/Red/Jumping/RedDragon(RunJump)1.png" type="Texture" id=43]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Running/YellowDragon(Running)6.png" type="Texture" id=44]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Running/YellowDragon(Running)3.png" type="Texture" id=45]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Jumping/YellowDragon(RunJump)1.png" type="Texture" id=46]
[ext_resource path="res://assets/Characters/Dragon/Yellow/YellowDragon(Idle).png" type="Texture" id=47]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Jumping/YellowDragon(RunJump)2.png" type="Texture" id=48]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Jumping/YellowDragon(RunJump)3.png" type="Texture" id=49]
[ext_resource path="res://assets/Characters/Dragon/Red/RedDragon(Turn).png" type="Texture" id=50]
[ext_resource path="res://assets/Characters/Dragon/Red/Running/RedDragon(Running)4.png" type="Texture" id=51]
[ext_resource path="res://assets/Characters/Dragon/Red/Jumping/RedDragon(RunJump)2.png" type="Texture" id=52]
[ext_resource path="res://assets/Characters/Dragon/Yellow/YellowDragon(Turn).png" type="Texture" id=53]
[ext_resource path="res://assets/Characters/Dragon/Green/Jumping/GreenDragon(Jump)1.png" type="Texture" id=54]
[ext_resource path="res://assets/Characters/Dragon/Green/Running/GreenDragon(Running)4.png" type="Texture" id=55]
[ext_resource path="res://assets/Characters/Dragon/Red/Jumping/RedDragon(IdleJump)1.png" type="Texture" id=56]
[ext_resource path="res://assets/Characters/Dragon/Green/Running/GreenDragon(Running)5.png" type="Texture" id=57]
[ext_resource path="res://assets/Characters/Dragon/Blue/BlueDragon(Turn).png" type="Texture" id=58]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Jumping/YellowDragon(Jump)2.png" type="Texture" id=59]
[ext_resource path="res://assets/Characters/Dragon/Red/RedDragon(Idle).png" type="Texture" id=60]
[ext_resource path="res://assets/Characters/Dragon/Yellow/Running/YellowDragon(Running)4.png" type="Texture" id=61]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 33 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 40 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 37 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 23 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 60 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 47 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 54 ), ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 56 ), ExtResource( 26 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 59 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 0.933034, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 30 ), ExtResource( 14 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 27.8576, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 35 ), ExtResource( 20 ), ExtResource( 42 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 43 ), ExtResource( 52 ), ExtResource( 27 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 46 ), ExtResource( 48 ), ExtResource( 49 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 29 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 51 ), ExtResource( 39 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 31 ), ExtResource( 45 ), ExtResource( 61 ), ExtResource( 24 ), ExtResource( 44 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 34 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 25 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 22 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 36 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 58 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 41 ) ]
}

[sub_resource type="Animation" id=29]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 50 ) ]
}

[sub_resource type="Animation" id=30]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 53 ) ]
}

[node name="Localplayer" type="KinematicBody2D"]
collision/safe_margin = 0.001
script = ExtResource( 2 )

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="LogicHitArea" type="Area2D" parent="."]

[node name="LogicHitBox" type="CollisionShape2D" parent="LogicHitArea"]
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 0, -64 )
current = true
smoothing_enabled = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 48 )

[node name="Visual" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Texture" type="Sprite" parent="Visual"]
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visual"]
autoplay = "IdleBlue"
anims/DoubleJumpBlue = SubResource( 3 )
anims/DoubleJumpGreen = SubResource( 4 )
anims/DoubleJumpRed = SubResource( 5 )
anims/DoubleJumpYellow = SubResource( 6 )
anims/IdleBlue = SubResource( 7 )
anims/IdleGreen = SubResource( 8 )
anims/IdleRed = SubResource( 9 )
anims/IdleYellow = SubResource( 10 )
anims/JumpBlue = SubResource( 11 )
anims/JumpGreen = SubResource( 12 )
anims/JumpRed = SubResource( 13 )
anims/JumpYellow = SubResource( 14 )
anims/RunBlue = SubResource( 15 )
anims/RunGreen = SubResource( 16 )
anims/RunJumpBlue = SubResource( 17 )
anims/RunJumpGreen = SubResource( 18 )
anims/RunJumpRed = SubResource( 19 )
anims/RunJumpYellow = SubResource( 20 )
anims/RunRed = SubResource( 21 )
anims/RunYellow = SubResource( 22 )
anims/SlideBlue = SubResource( 23 )
anims/SlideGreen = SubResource( 24 )
anims/SlideRed = SubResource( 25 )
anims/SlideYellow = SubResource( 26 )
anims/TurnBlue = SubResource( 27 )
anims/TurnGreen = SubResource( 28 )
anims/TurnRed = SubResource( 29 )
anims/TurnYellow = SubResource( 30 )
